<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailAct">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:background="@drawable/bg_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/picWisata"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/wisata1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/namaWisata"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mregular"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    tools:text="Kyoto Temple" />

                <TextView
                    android:id="@+id/lokasiWisata"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mlight"
                    android:textSize="12sp"
                    tools:text="Kyoto, Japan" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/mregular"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:text="Category" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/harga_label"
                    android:textColor="@color/black"
                    android:fontFamily="@font/mlight"/>

                <TextView
                    android:id="@+id/hargaWisata"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="IDR 400.000"
                    android:textColor="@color/black"
                    android:fontFamily="@font/mregular"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/catWisata"
                android:layout_width="90dp"
                android:layout_height="20dp"
                android:layout_marginStart="30dp"
                android:fontFamily="@font/mregular"
                android:textSize="12sp"
                tools:text="Bangunan"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:background="@drawable/bg_kategori_item"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/mregular"
            android:text="@string/informasi_wisata"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/infoWisata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/mlight"
                android:lineSpacingExtra="10sp"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="informasi dari arraynfsadbfabvfoibafsboiasflbkasflbasflkbasflbbfaslbasflbas" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_btn_primary"
        android:fontFamily="@font/mregular"
        android:text="@string/wishlist_label"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>